# Outils

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: outilpegase.yml
devtools/: lanceur_build.bash  lanceur_doxygen.bash  lanceur_mefversions.bash  lanceur_pylint.bash  lanceur_pytest.bash  lanceur_ruff.bash  lanceur_shellcheck.bash  lanceur_sphinx.bash  lanceur_tox.bash
docs/: .coveragerc  Doxyfile  conf.py  index.html  index.rst  index_github-pages.html  pegase.rst  pytest.ini  requirements.txt  sonar-project.properties  tox.ini
docs/locales/fr/LC_MESSAGES/: sphinx.mo
src/: pegase.bash  pegase.py  pegase_nic.py
tests/: test_pegase.py
