[project]
name = "Outils"
version = "1.4.2"
description = """
Affichage bilan journalier Pegase selon badgeages et heure départ.
"""
readme = "README.md"
authors = [
    { name = "BRUSCHI Nicolas", email = "nicolas.bruschi@meteo.fr" }
]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "CECILL-C"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "<https://gitlab.meteo.fr/desr-sires-pga/support_n1/outils>"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "src/*.py",
]
exclude =[
   "src/test*.py",
   "tests/test*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["build/Outils"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 81
indent-width = 2

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "tab"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = true
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true
# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.sonar]
projectKey = "bruschin_listem3u"
qualitygate.wait = true
projectName = "listem3u"
projectBaseDir = "src"
sourceEncoding = "UTF-8"

[tool.poetry]
version = "1.9.4"
description = """
Affichage bilan journalier Pegase selon badgeages et heure départ.
"""
readme = "README.md"
authors = [
    { name = "BRUSCHI Nicolas", email = "nicolas.bruschi@meteo.fr" }
]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[tool.tox]
legacy_tox_ini = """
[tox]
requires =
	tox>=4
env_list = clean, lint, type, 3.1{0,1,2}
tox_root = ./

skipsdist = True

[testenv]
description = run unit tests
deps =
    pytest
    pytest-cov
depends =
    {py310,py311,py312}: clean
    report: py310,py311,py312
commands =
    pytest  --cov=src \
            --cov-append \ 
            --cov-report html:rapports/tox_cov_html \
            --cov-report xml:rapports/tox_cov.xml \
            tests/

[testenv:report]
deps = coverage
skip_install = true
commands =
    coverage report
    coverage html

[testenv:clean]
deps = coverage
skip_install = true
commands = coverage erase
"""